--- a/week0/index.html
+++ b/week0/index.html
@@ -1,56 +1,72 @@
-<h1 class="Titels">Universe</h1>
-<p id="link-to">
-  <a id="link-to" ref="https://en.wikipedia.org/wiki/Multiverse">Multiverse information</a>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>My Home Work Week 0</title>
+  <link rel="stylesheet" href="main.css">
+</head>
+
+<body>
+  <h1 class="Titels">Universe</h1>
+  <p id="link-to">
+    <a id="link-to" ref="https://en.wikipedia.org/wiki/Multiverse">Multiverse information</a>
   </p>
 
-<img src="https://media.tenor.com/images/61660e96aecc65c7b11099234344c31f/tenor.gif" width="600" class="fotos">
+  <img src="https://media.tenor.com/images/61660e96aecc65c7b11099234344c31f/tenor.gif" width="600" class="fotos">
 
-<p class="text-just-text" id="font-like-scream"> <strong>Did you know at which place you are living ?</strong></p>
+  <p class="text-just-text" id="font-like-scream"> <strong>Did you know at which place you are living ?</strong></p>
 
-<p class="text-just-text"><strong><strong><span class="Some-Space"> 
+  <p class="text-just-text"><strong><strong><span class="Some-Space">
 
- Our home</span> not only that small blue planet but whole that black skyes and white shiny stars. We are much smaller them any of you can expect and them any of you can imagen. In total our "adres" is Milky Way.   
-  What is that exactly ? The Milky Way ? </strong> 
-</p>  
-  
-<h2 class="Titels">  
-  Milky Way Explanation:  
-  </h2>
-<img src="http://bestanimations.com/Earth&Space/galaxy-animation.gif" width="600">
+   Our home</span> not only that small blue planet but whole that black skyes and white shiny stars. We are much smaller them any of you can expect and them any of you can imagen. In total our "adres" is Milky Way.
+    What is that exactly ? The Milky Way ? </strong>
+  </p>
 
-<p id="planet-list"><strong>MILKY WAY PLANET LIST:</strong></p>
+  <h2 class="Titels">
+    Milky Way Explanation:
+    </h2>
+  <img src="http://bestanimations.com/Earth&Space/galaxy-animation.gif" width="600">
 
-<h4>
-<table> 
-  <thead>
-    <tr>
-      <th>Mercury</th>
-      <th>Venus</th>
-      <th>Earth</th>
-      <th>Mars</th>
-      <th>Jupiter</th>
-      <th>Saturn</th>
-      <th>Uranus</th>
-      <th>Neptune</th>
-    </tr>     
-  </thead>
-</table>
-  </h4>
+  <p id="planet-list"><strong>MILKY WAY PLANET LIST:</strong></p>
 
-  
-<p class="text-just-text"><strong><span class="Some-Space">  
-  The Milky Way</span> is the galaxy that contains our Solar System. The descriptive "milky" is derived from the appearance from Earth of the galaxy – a band of light seen in the night sky formed from stars that cannot be individually distinguished by the naked eye. The term "Milky Way" is a translation of the Latin via lactea, from the Greek γαλαξίας κύκλος (galaxías kýklos, "milky circle"). The Milky Way is a barred spiral galaxy with a diameter between 100,000 light-years and 180,000 light-years.The Milky Way is estimated to contain 100–400 billion stars. There are probably at least 100 billion planets in the Milky Way. The Solar System is located within the disk, about 26,000 light-years from the Galactic Center, on the inner edge of one of the spiral-shaped concentrations of gas and dust called the Orion Arm.</strong>  
- </p>
-
-<h3 class="Titels">  
-  Why its important to know ?!  
-  </h3>
-  
-<p id="knoledge"><strong><strong><span class="Some-Space">
-  Because all</span> that knolage give you more bright picture of our nature and some interesting facts about our enviroment. I thnik space theme and physic is very interesting item for research. That what we must tell our children and teach them and other people look at our world at another way. When i was a childe i want to know more about things around me and i try search information from books, journals and parents but now we have INTERNET ! That great stuff can help us reach so rare and close informatio which we absolutly can't find before. I hope we all find somthing at this page and make own decisions abot things around us, above us and within us !</strong></p>
- 
-
-  
- 
+  <h4>
+  <table>
+    <thead>
+      <tr>
+        <th>Mercury</th>
+        <th>Venus</th>
+        <th>Earth</th>
+        <th>Mars</th>
+        <th>Jupiter</th>
+        <th>Saturn</th>
+        <th>Uranus</th>
+        <th>Neptune</th>
+      </tr>
+    </thead>
+  </table>
+    </h4>
 
 
+  <p class="text-just-text"><strong><span class="Some-Space">
+    The Milky Way</span> is the galaxy that contains our Solar System. The descriptive "milky" is derived from the appearance from Earth of the galaxy – a band of light seen in the night sky formed from stars that cannot be individually distinguished by the naked eye. The term "Milky Way" is a translation of the Latin via lactea, from the Greek γαλαξίας κύκλος (galaxías kýklos, "milky circle"). The Milky Way is a barred spiral galaxy with a diameter between 100,000 light-years and 180,000 light-years.The Milky Way is estimated to contain 100–400 billion stars. There are probably at least 100 billion planets in the Milky Way. The Solar System is located within the disk, about 26,000 light-years from the Galactic Center, on the inner edge of one of the spiral-shaped concentrations of gas and dust called the Orion Arm.</strong>
+  </p>
+
+  <h3 class="Titels">
+    Why its important to know ?!
+    </h3>
+
+  <p id="knoledge"><strong><strong><span class="Some-Space">
+    Because all</span> that knolage give you more bright picture of our nature and some interesting facts about our enviroment. I thnik space theme and physic is very interesting item for research. That what we must tell our children and teach them and other people look at our world at another way. When i was a childe i want to know more about things around me and i try search information from books, journals and parents but now we have INTERNET ! That great stuff can help us reach so rare and close informatio which we absolutly can't find before. I hope we all find somthing at this page and make own decisions abot things around us, above us and within us !</strong></p>
+
+
+
+
+
+
+
+</body>
+
+</html>
